# create-discord-bot

./: Cargo.toml  LICENSE  README.md  config.json
src/: boilerplates.rs  create.rs  main.rs  ui.rs
