[package]
name = "create-discord-bot"
version = "0.1.0"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE"
]
homepage = "https://github.com/27Saumya/create-discord-bot"
description = "Simple command line tool to get boilerplate code for building a discord bot!"
repository = "https://github.com/27Saumya/create-discord-bot"
keywords = [
	"cli",
	"discord-bot",
    "command-line"
]

[dependencies]
dialoguer = "0.11.0"
console = "0.15.7"
colored = "2.0.4"